module/postponed/type_constructor/tests/inc/single/single_not_completed_type_test.stderr
error: no rules expected the token `_`
   --> tests/dt/type_constructor/single/single_not_completed_type_test.rs:8:27
    |
8   |     pub single Bad : Vec< _ >;
    |                           ^ no rules expected this token in macro call
    |
note: while trying to match `>`
   --> rust/impl/dt/type_constructor/single.rs
    |
    |       $( < $( $ParamName : ident $( : $ParamTy1x1 : ident $( :: $ParamTy1xN : ident )* $( + $ParamTy2 : path )* )? ),* > )?
    |                                                                                                                        ^
