module/postponed/type_constructor/tests/inc/single/single_not_completed_type_test.rs
use type_constructor::prelude::*;

fn main()
{
  types!
  {
    
    pub single Bad : Vec< _ >;

  }
}
